# MyHeart

./: .gitignore  CMakeLists.txt  readme.md
App/: CMakeLists.txt
App/Connections/: CMakeLists.txt
App/Connections/qml/: connectionCtrlUI.qml  main.qml
App/Connections/resources/: app.rc
App/Connections/src/: WindowsEventFilter.cpp  WindowsEventFilter.h  main.cpp
App/SerialportTools/: CMakeLists.txt
App/SerialportTools/src/: main.cpp
Common/: CMakeLists.txt
Common/CommonQml/: BubbleToolTip.qml  CMakeLists.txt  FramelessWindow.qml
LeetCode/: CMakeLists.txt
LeetCode/include/: Arrays.h  Define.h
LeetCode/src/: LeetCodeAlgorithm.cpp
Note/: gitCommit规范.md  opencv扩展模块的主要功能介绍.md  opencv源码编译.md  pagmo2从vcpkg安装教程.md
